--- a/index.html
+++ b/index.html
@@ -6,8 +6,48 @@
   <title>Odin Landing Page</title>
 </head>
 <body>
+
   <header>
-    
+    <div>Header Logo</div>
+    <div>
+      <ul>
+        <li>header link one</li>
+        <li>header link two</li>
+        <li>header link three</li>
+      </ul>
+    </div>
   </header>
+
+  <main>
+    <div>This website is awesome</div>
+    <div>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
+    <button>Sign up</button>
+
+    <div>Some random information</div>
+    <div>this is some subtext under an illustration or image</div>
+    <div>this is some subtext under an illustration or image</div>
+    <div>this is some subtext under an illustration or image</div>
+    <div>this is some subtext under an illustration or image</div>
+
+    <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+    <div>-Thor, God of Thunder</div>
+
+    <div>Call to action! It's time!</div>
+    <div>Sign up for our product by clicking that button right over there!</div>
+    <div>Sign Up</div>
+  </main>
+
+  <footer>
+    <div>Copvright © The Odin Project 2021</div>
+  </footer>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
