--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Landing Page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -23,6 +24,8 @@
     <div>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
     <button>Sign up</button>
 
+    <div>this is a placeholder for an image</div>
+
     <div>Some random information</div>
     <div>this is some subtext under an illustration or image</div>
     <div>this is some subtext under an illustration or image</div>
@@ -34,7 +37,7 @@
 
     <div>Call to action! It's time!</div>
     <div>Sign up for our product by clicking that button right over there!</div>
-    <div>Sign Up</div>
+    <button>Sign up</button>
   </main>
 
   <footer>
