--- a/index.html
+++ b/index.html
@@ -8,41 +8,56 @@
 </head>
 <body>
 
-  <header>
-    <div>Header Logo</div>
+  <div class="header">
+    <div class="left-logo">Header Logo</div>
     <div>
-      <ul>
+      <ul class="right-links">
         <li>header link one</li>
         <li>header link two</li>
         <li>header link three</li>
       </ul>
     </div>
-  </header>
+  </div>
 
-  <main>
-    <div>This website is awesome</div>
-    <div>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
-    <button>Sign up</button>
+  <div class="main">
 
-    <div>this is a placeholder for an image</div>
+    <div class="one">
+      <div class="modal"></div>
+        <div>This website is awesome</div>
+        <div>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
+        <button>Sign up</button>
+      </div>
+      <div class="image-container">this is a placeholder for an image</div>
+    </div>  
 
-    <div>Some random information</div>
-    <div>this is some subtext under an illustration or image</div>
-    <div>this is some subtext under an illustration or image</div>
-    <div>this is some subtext under an illustration or image</div>
-    <div>this is some subtext under an illustration or image</div>
+    <div class="two">
+      <div class="cards-title">Some random information</div>
+      <div class="card-container">
+        <div class="card">this is some subtext under an illustration or image</div>
+        <div class="card">this is some subtext under an illustration or image</div>
+        <div class="card">this is some subtext under an illustration or image</div>
+        <div class="card">this is some subtext under an illustration or image</div>
+      </div>
+      </div>
 
-    <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-    <div>-Thor, God of Thunder</div>
+    <div class="three">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div>-Thor, God of Thunder</div>
+    </div>
 
-    <div>Call to action! It's time!</div>
-    <div>Sign up for our product by clicking that button right over there!</div>
-    <button>Sign up</button>
-  </main>
+    <div class="four">
+      <div class="call-to-action">
+        <div>Call to action! It's time!</div>
+        <div>Sign up for our product by clicking that button right over there!</div>
+      <div class="second-button">
+        <button>Sign up</button>
+      </div>
+    </div>
+  </div>
 
-  <footer>
+  <div class="footer">
     <div>Copvright © The Odin Project 2021</div>
-  </footer>
+  </div>
 
 
 
