Edit CSS structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +9,24 @@
 <body>
 
   <div class="header">
-    <div class="left-logo">Header Logo</div>
-    <div>
-      <ul class="right-links">
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
-      </ul>
-    </div>
+    <div class="logo">Header Logo</div>
+    <ul class="links">
+      <li>header link one</li>
+      <li>header link two</li>
+      <li>header link three</li>
+    </ul>
   </div>
 
-  <div class="main">
-
-    <div class="one">
-      <div class="modal"></div>
-        <div>This website is awesome</div>
-        <div>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
+    <div class="section-1">
+      <div class="blurb-container">
+        <div class="hero-main">This website is awesome</div>
+        <div class="hero-secondary">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
         <button>Sign up</button>
       </div>
-      <div class="image-container">this is a placeholder for an image</div>
-    </div>  
+      <div class= "image-container">this is a placeholder for an image</div>  
+    </div>
 
-    <div class="two">
+    <div class="section-2">
       <div class="cards-title">Some random information</div>
       <div class="card-container">
         <div class="card">this is some subtext under an illustration or image</div>
@@ -38,33 +34,26 @@
         <div class="card">this is some subtext under an illustration or image</div>
         <div class="card">this is some subtext under an illustration or image</div>
       </div>
-      </div>
-
-    <div class="three">
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div>-Thor, God of Thunder</div>
     </div>
 
-    <div class="four">
+    <div class="section-3">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="cite">-Thor, God of Thunder</div>
+    </div>
+
+    <div class="section-4">
       <div class="call-to-action">
         <div>Call to action! It's time!</div>
         <div>Sign up for our product by clicking that button right over there!</div>
-      <div class="second-button">
+      <div class="bottom-button">
         <button>Sign up</button>
       </div>
     </div>
-  </div>
 
-  <div class="footer">
+
+  <footer class="footer">
     <div>Copvright © The Odin Project 2021</div>
-  </div>
-
-
-
-
-
-
-
+  </footer>
 
 
 </body>
