--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
     <div class="section-1">
-      <div class="blurb-container">
+      <div class="hero-container">
         <div class="hero-main">This website is awesome</div>
         <div class="hero-secondary">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>
         <button>Sign up</button>
@@ -27,34 +27,47 @@
     </div>
 
     <div class="section-2">
-      <div class="cards-title">Some random information</div>
-      <div class="card-container">
-        <div class="card">this is some subtext under an illustration or image</div>
-        <div class="card">this is some subtext under an illustration or image</div>
-        <div class="card">this is some subtext under an illustration or image</div>
-        <div class="card">this is some subtext under an illustration or image</div>
+      <div class="info-header">Some random information.</div>
+      <div class="info-container">
+        <div class="info">
+          <div class="card">card</div>
+          <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+          <div class="card">card</div>
+          <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+          <div class="card">card</div>
+          <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+          <div class="card">card</div>
+          <div class="text">this is some subtext under an illustration or image</div>
+        </div>
       </div>
     </div>
+
 
     <div class="section-3">
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="cite">-Thor, God of Thunder</div>
     </div>
 
+
     <div class="section-4">
       <div class="call-to-action">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
+        <div class="action-main">Call to action! It's time!</div>
+        <div class="action-secondary">Sign up for our product by clicking that button right over there!</div>
+      </div>
       <div class="bottom-button">
-        <button>Sign up</button>
+        <button class="bottom-button">Sign up</button>
       </div>
     </div>
-
-
+    
   <footer class="footer">
     <div>Copvright © The Odin Project 2021</div>
   </footer>
-
 
 </body>
 </html>
